@@ -3,6 +3,7 @@ dev:
   * add read_events_kwargs option, can be used to pass options to ObsPy's read_events
   * add subtract_local_depth option
   * if multiple picks for same phase and station -> warn only instead of skipping whole event
+  * fix for numpy>=1.24: remove usage of np.float
 v4.2:
   * allow to fix station site response to geometric mean of more than one station (for command line script)
   * excluded label is now optional
